# libcolors

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build  configure
include/Colors/: Colors.h
src/: Colors.cpp
test/: CMakeLists.txt
test/src/: Commons.h  black_fg_dark.cpp  cyan_bg_bright.cpp  cyan_fg_bright_underline_overline.cpp
